style: fixed modal content spacing adding margin only if header is present

--- a/packages/react-ui/styles/modules/_modal.scss
+++ b/packages/react-ui/styles/modules/_modal.scss
@@ -114,9 +114,9 @@
 
 
 /******
-    Modal Content
+    Modal Content Spacing
 ******/
-.modal .modal-content {
+.modal .modal-header + .modal-content {
   margin-top: $modal-vertical-padding;
 }
 
